# sdk-python

./: .gitignore  .woodpecker.yml  CHANGELOG.md  CONFORMANCE.md  README.md  docker-compose.test.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  public-boundary.yml  publish.yml  release-plan-recovery.yml
docs/: CNAME  index.md
docs/reference/: activity.md  auth_composition.md  client.md  errors.md  external_storage.md  external_task_input.md  external_task_result.md  invocable.md  metrics.md  retry_policy.md  serializer.md  sync.md  testing.md  worker.md  workflow.md
examples/: greeter.py
examples/order_processing/: Dockerfile  README.md  __init__.py  app.py  docker-compose.yml
scripts/: check-cli-parity.py  check-public-boundary.sh  generate-api-reference.py  smoke-built-package.py
scripts/ci/: check-docs-release-audit.sh  checkout-public-repository.py  cli_release_verifier_contract.py  component-release-recovery.py  configure-integration-endpoint.py  test-component-release-recovery.py
src/durable_workflow/: __init__.py  _avro.py  activity.py  auth_composition.py  client.py  errors.py  external_storage.py  external_task_input.py  external_task_result.py  history_bundle_verify.py  interceptors.py  invocable.py  metrics.py  nexus.py  python_conformance.py  replay_conformance.py  replay_verify.py  retry_policy.py  serializer.py  sync.py  testing.py  worker.py  workflow.py  workflow_updates_conformance.py
tests/: test_activity_context.py  test_auth_composition.py  test_ci_checkout.py  test_ci_integration_endpoint.py  test_client.py  test_control_plane_parity_fixtures.py  test_errors.py  test_external_storage.py  test_external_task_input.py  test_external_task_result.py  test_golden_history_replay.py  test_history_bundle_verify.py  test_history_event_contract.py  test_invocable.py  test_metrics.py  test_order_processing_example.py  test_public_boundary_scanner.py  test_python_conformance.py  test_queries.py  test_readme_quickstart.py  test_release_docs_audit_workflow.py  test_replay.py  test_replay_conformance.py  test_replay_verify.py  test_retry_policy.py  test_schedules.py  test_serializer.py  test_signals.py  test_sleep.py  test_standalone_activity_client.py  test_sync.py  test_testing_harness.py  test_updates.py  test_wait_condition.py  test_worker.py  test_workflow_updates_conformance.py
tests/fixtures/control-plane/: activity-complete-parity.json  activity-fail-parity.json  bridge-webhook-parity.json  namespace-create-parity.json  namespace-delete-parity.json  namespace-describe-parity.json  namespace-list-parity.json  namespace-set-storage-driver-parity.json  namespace-update-parity.json  query-task-complete-parity.json  query-task-fail-parity.json  query-task-poll-parity.json  schedule-backfill-parity.json  schedule-create-parity.json  schedule-delete-parity.json  schedule-describe-parity.json  schedule-history-parity.json  schedule-list-parity.json  schedule-pause-parity.json  schedule-resume-parity.json  schedule-trigger-parity.json  schedule-update-parity.json  search-attribute-create-parity.json  search-attribute-delete-parity.json  search-attribute-list-parity.json  storage-test-parity.json  system-activity-timeout-pass-parity.json  system-activity-timeout-status-parity.json  system-repair-pass-parity.json  system-repair-status-parity.json  system-retention-pass-parity.json  system-retention-status-parity.json  task-queue-build-id-drain-parity.json  task-queue-build-id-promote-parity.json  task-queue-build-id-resume-parity.json  task-queue-build-ids-parity.json  task-queue-describe-parity.json  task-queue-list-parity.json  worker-deregister-parity.json  worker-describe-parity.json  (+20 more)
tests/fixtures/golden_history/: python-sdk-0.3.1.json  python-sdk-v0.json
tests/integration/: conftest.py  polyglot_fixtures.py  test_polyglot.py  test_smoke.py
