[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "durable-workflow"
version = "0.2.0"
description = "Python SDK for the Durable Workflow server (language-neutral HTTP protocol)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Durable Workflow Contributors" },
]
keywords = [
    "workflow",
    "durable",
    "orchestration",
    "temporal",
    "saga",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "avro>=1.12,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
]
prometheus = [
    "prometheus-client>=0.20",
]

[project.urls]
Homepage = "https://github.com/durable-workflow/sdk-python"
Documentation = "https://durable-workflow.github.io/docs/2.0/sdks/python/"
Repository = "https://github.com/durable-workflow/sdk-python"
Issues = "https://github.com/zorporation/durable-workflow/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a running server (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["durable_workflow"]
mypy_path = "src"

# apache/avro does not ship type stubs; treat it as Any.
[[tool.mypy.overrides]]
module = ["avro", "avro.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
